# media_core

./: .gitignore  Cargo.toml
crates/media_core/: Cargo.toml
crates/media_core/src/process/: config.rs  hw_accel.rs  mod.rs  processor.rs  types.rs  video.rs
crates/media_core/src/rtsp/: capture.rs  config.rs  ffmpeg.rs  mod.rs  types.rs
docs/: CHANGELOG.md  RELEASE_WORKFLOW.md  TODO.md  UNIT_TEST.md  docs_hls_analysis.md
docs/usage/: ANALYSIS.md  ANNOTATION.md  BENCHMARK.md  HLS.md  METADATA.md  PROCESS.md  STREAMING.md  VIDEO_PROCESS.md
examples/: README.md  config_process.json
examples/media_core_app/: Cargo.toml
examples/media_core_app/docker/: Dockerfile  docker-compose.yml
examples/media_core_app/src/: main.rs
script/: run_build.sh
src/: cli.rs  lib.rs  main.rs
src/analysis/: config.rs  mod.rs  types.rs
src/analysis/motion/: detector.rs  frame_diff.rs  knn.rs  mod.rs  mog2.rs  optical_flow.rs
src/analysis/similarity/: analyzer.rs  feature_matching.rs  histogram.rs  mod.rs  perceptual_hash.rs
src/annotation/: annotator.rs  mod.rs  overlay.rs  types.rs
src/benchmark/: mod.rs  report.rs  runner.rs
src/camera/: camera.rs  helpers.rs  mod.rs  types.rs  utils.rs
src/cli/: analysis.rs  annotation.rs  benchmark.rs  config.rs  hls.rs  metadata.rs  mod.rs  process.rs  rtsp.rs  streaming.rs  usage.rs  video_process.rs
src/hls/: config.rs  converter.rs  mod.rs  types.rs
src/metadata/: codec_analyzer.rs  codec_analyzer_ffprobe.rs  helpers.rs  image_processor.rs  mod.rs  orchestrator.rs  quality_analyzer.rs  thumbnail_generator.rs  types.rs  video_processor.rs
src/process/: config.rs  factories.rs  handlers.rs  hw_accel.rs  mod.rs  processor.rs  stats.rs  validation.rs  video.rs
src/process/workers/: creator.rs  extractors.rs  mod.rs  scanner.rs
src/rtsp/: capture.rs  ffmpeg.rs  mod.rs  opencv.rs  types.rs
src/rtsp_sync/: ffmpeg_utils.rs  latency.rs  mod.rs  processor.rs  synchronizer.rs  types.rs
src/streaming/: extractor.rs  helpers.rs  mod.rs  sampler.rs  strategy.rs  types.rs
src/video_process/: frame_extraction.rs  helpers.rs  image_display.rs  mod.rs  types.rs  wrappers.rs
tests/: test_annotation.rs  test_benchmark.rs  test_config_generation.rs  test_hls_conversion.rs  test_metadata.rs  test_process_module.rs  test_rtsp_extraction.rs  test_streaming.rs  test_video_process.rs
