[workspace]
members = [
    "crates/media_core",
]

[package]
name = "rtsp_stream_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
media_core = { path = "crates/media_core", package = "media-core" }
rfd = "0.14.1"
serde = "1.0.214"
serde_json = "1.0.132"
m3u8-rs = "5.0.4"
tempfile = "3.8.0"

# 🚀 PERFORMANCE OPTIMIZATION PROFILES
[profile.release]
# Maximum optimization for production builds
opt-level = 3              # Maximum optimization
debug = false              # No debug info (smaller binary)
strip = true               # Strip symbols (even smaller binary)
lto = "fat"               # Link-time optimization (slower build, faster runtime)
codegen-units = 1         # Single codegen unit (better optimization)
panic = "abort"           # Abort on panic (slightly faster)
overflow-checks = false   # Disable overflow checks (faster math)

[profile.dev]
# Faster development builds
opt-level = 1             # Some optimization for dev builds
debug = true              # Keep debug info
incremental = true        # Faster incremental builds
split-debuginfo = "unpacked"  # Better debug experience on macOS
